--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "firebase": "^10.3.1",
     "gsap": "^3.12.2",
     "install": "^0.13.0",
+    "jquery": "^3.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
